assignment 2 commit contrast fix 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ section figure {
     margin: 10px auto ;
 }
 blockquote q {
+    background-color: whitesmoke;
     padding: 1rem;
     margin: 1rem;
     display: block;
